# tsetlin.c

./: .gitmodules  CMakeLists.txt  README.md  main.c  main_mnist.c
libraries/: CMakeLists.txt
libraries/tqdm/: tqdm.c  tqdm.h
tests/: CMakeLists.txt
tests/test_automaton/: test_automaton.c
tests/test_clause/: test_clause.c
tsetlin/: CMakeLists.txt  automaton.c  automaton.h  clause.c  clause.h  main.c  tsetlin.c  tsetlin.h
